--- a/exo-40.html
+++ b/exo-40.html
@@ -20,6 +20,9 @@
                 gravia consortes latrociniis praedatricibus praeter pacari consortes saepeque praeter.</p>
         </div>
         <div id="div3">
+            <p>Non ergo erunt homines deliciis diffluentes audiendi, si quando de amicitia, quam nec usu nec
+                ratione habent cognitam, disputabunt. Nam quis est, pro deorum fidem atque
+                hominum!</p>
             <p id="hide">Namque 33eorum ad ad perciti alente ut inopinis sane adulescentem indignitate gravia consortes
                 latrociniis praedatricibus praeter pacari consortes saepeque praeter.</p>
         </div>
